--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
-    /* Added style for better readability of the list */
     #lecturas ul {
-      list-style: none; /* Removes bullet points */
+      list-style: none;
       padding: 0;
     }
 
@@ -77,13 +76,13 @@
     }
 
     #lecturas a {
-      color: #007bff; /* Blue link color */
-      text-decoration: none; /* Removes underline */
+      color: #007bff;
+      text-decoration: none;
       font-weight: bold;
     }
 
     #lecturas a:hover {
-      text-decoration: underline; /* Adds underline on hover */
+      text-decoration: underline;
     }
   </style>
 </head>
